feat(processor): 添加处理器基类方法和配置检查功能
添加BaseProcessor的抽象方法和工具方法，包括process、get_folders和ensure_dir
在Config类中添加is_enable方法用于检查配置项是否启用
更新配置文件添加process和input相关配置

--- a/config.yaml
+++ b/config.yaml
@@ -1,2 +1,8 @@
 camera:
   ["FRONT", "FRONT_LEFT", "FRONT_RIGHT", "SIDE_LEFT", "SIDE_RIGHT"]
+
+input:
+  "/Users/wuyou/Works/universal_interface/input"
+
+process:
+  ego_pose: true
