feat: 实现3DGS数据接口核心功能
添加处理器工厂模式支持动态创建处理器
实现EgoPose处理器完成数据转换功能
添加日志模块支持不同级别日志输出
完善基础处理器类提供目录操作工具方法
更新配置文件添加输出路径配置
添加README文档说明项目架构和使用方法

--- a/config.yaml
+++ b/config.yaml
@@ -4,5 +4,8 @@ camera:
 input:
   "/Users/wuyou/Works/universal_interface/input"
 
+output:
+  "/Users/wuyou/Works/universal_interface/test"
+
 process:
   ego_pose: true
