--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,10 @@ author-email = "wuyou@saimo.ai"
 description = "3DGS训练通用数据接口,将自定义数据集转换成3DGS训练数据"
 readme = "README.md"
 requires-python = "<=3.14, >=3.12"
-dependencies = ["numpy>=2.3.2", "pyyaml>=6.0.2", "tqdm>=4.67.1"]
+dependencies = [
+    "imageio[ffmpeg]>=2.37.0",
+    "numpy>=2.3.2",
+    "opencv-python>=4.11.0.86",
+    "pyyaml>=6.0.2",
+    "tqdm>=4.67.1",
+]
