--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,11 @@
 camera:
-  ["FRONT", "FRONT_LEFT", "FRONT_RIGHT", "SIDE_LEFT", "SIDE_RIGHT"]
+  positions: ["FRONT", "FRONT_LEFT", "FRONT_RIGHT", "SIDE_LEFT", "SIDE_RIGHT"]
+  id_map:
+    FRONT: 0
+    FRONT_LEFT: 1
+    FRONT_RIGHT: 2
+    SIDE_LEFT: 3
+    SIDE_RIGHT: 4
 
 input:
   "/home/saimo/wuyou/universal_interface/input"
