refactor: 重构代码使用Path替代os.path并优化配置管理
重构文件路径操作使用pathlib.Path替代os.path，提高代码可读性和跨平台兼容性
重构配置管理模块，增加配置验证和属性式访问功能
优化处理器类的初始化逻辑，统一使用Config对象获取配置
移除冗余代码并改进类型提示和错误处理

--- a/config.yaml
+++ b/config.yaml
@@ -7,9 +7,6 @@ camera:
     SIDE_LEFT: 3
     SIDE_RIGHT: 4
 
-input:
-  "/home/saimo/wuyou/universal_interface/input"
-
-output:
-  "/home/saimo/wuyou/universal_interface/test"
+input: "/home/saimo/wuyou/universal_interface/input"
+output: "/home/saimo/wuyou/universal_interface/test"
 
