--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "imageio[ffmpeg]>=2.37.0",
     "numpy>=2.3.2",
     "opencv-python>=4.11.0.86",
+    "plyfile>=1.1.2",
     "pyyaml>=6.0.2",
     "tqdm>=4.67.1",
 ]
