refactor: 重构相机配置和数据处理逻辑
- 将相机位置从字符串改为数字标识，简化配置
- 统一处理相机位置为字符串路径拼接
- 增强pose文件处理，支持12或16数字输入
- 改进标签文件解析，支持多种分隔符和零填充
- 优化点云处理，支持缺少外参文件的情况
- 更新.gitignore忽略zip文件
- 调整数据处理流水线，仅保留点云处理

--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,14 @@
 camera:
-  positions: ["FRONT", "FRONT_LEFT", "FRONT_RIGHT", "SIDE_LEFT", "SIDE_RIGHT"]
+  positions: [0, 1, 2, 3, 4, 5, 6]
   id_map:
-    FRONT: 0
-    FRONT_LEFT: 1
-    FRONT_RIGHT: 2
-    SIDE_LEFT: 3
-    SIDE_RIGHT: 4
+    0: 0
+    1: 1
+    2: 2
+    3: 3
+    4: 4
+    5: 5
+    6: 6
 
 input: "required_data"
-output: "test2"
+output: "output"
 
